Fixed bug when rotating ships on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
   width: 100vw;
   display: flex;
   flex-direction: column;
-  padding-top: 5vh;
+  padding-block: 5vh;
   gap: 2rem;
 }
 
@@ -217,6 +217,10 @@ li {
 
 .submarine {
   background-color: rgb(253, 253, 253);
+}
+
+.hover {
+  filter: brightness(70%);
 }
 
 .taken {
